<resources>
    <string name="app_name">QuizAppPlus</string>

    <string name="opciones">Opciones</string>
    <string name="juego">Juego</string>
    <string name="puntuacion">Puntuación</string>

    <string name="pregunta_act_1">Pregunta 1/10</string>
    <string name="pregunta_act_2">Pregunta 2/10</string>
    <string name="pregunta_act_3">Pregunta 3/10</string>
    <string name="pregunta_act_4">Pregunta 4/10</string>
    <string name="pregunta_act_5">Pregunta 5/10</string>
    <string name="pregunta_act_6">Pregunta 6/10</string>
    <string name="pregunta_act_7">Pregunta 7/10</string>
    <string name="pregunta_act_8">Pregunta 8/10</string>
    <string name="pregunta_act_9">Pregunta 9/10</string>
    <string name="pregunta_act_10">Pregunta 10/10</string>

    <string name="pistas_act_0">Pista 0/3</string>
    <string name="pistas_act_1">Pista 1/3</string>
    <string name="pistas_act_2">Pista 2/3</string>
    <string name="pistas_act_3">Pista 3/3</string>

    <string name="respuesta_1">Respuesta 1</string>
    <string name="respuesta_2">Respuesta 2</string>
    <string name="respuesta_3">Respuesta 3</string>
    <string name="respuesta_4">Respuesta 4</string>


    <string name="validacion_pregunta_1">Pregunta contestada incorrectamente</string>
    <string name="validacion_pregunta_2">Pregunta contestada correctamente</string>
    <string name="validacion_pregunta_3">Pregunta aun no respondida</string>

    <string-array name="mejores_puntajes">
        <item>1st - AAA </item>
        <item>2nd - YYY </item>
        <item>3rd - BBB </item>
        <item>4th - BAS </item>
        <item>5th - QWE </item>
        <item>6th - RTY </item>
        <item>7th - DDD </item>
        <item>8th - ASA </item>
        <item>9th - TTT </item>
        <item>10th - ZZZ </item>
    </string-array>


    <string name="Puntaje_final">0000000</string>

    <string name="cine1">Nombre de la pelicula mas taquillera del 2019</string>
    <string name="cine2">Como se llama la serie de peliculas donde los juguetes cobran vida</string>
    <string name="cine3">¿Quién es el director de Piratas del caribe: La maldición del perla negra?</string>
    <string name="cine4">¿Como se llamaba el burro que estaba siempre a lado de shrek?</string>
    <string name="cine5">¿De que compañia es Las cronicas de Narnia: el león, la bruja y el ropero?</string>

    <string name="musica1">¿Quién inventó el organo hidráulico?</string>
    <string name="musica2">¿Quién fue el primer artista en grabar rock and roll?</string>
    <string name="musica3">¿Cual de las siguientes obras no es de Mozart?</string>
    <string name="musica4">¿Quién era el vocalista de Nirvana?</string>
    <string name="musica5">¿Cual de las siguientes canciones no es de Queen?</string>

    <string name="smash1">¿Quiénes fueron los creadores de Super Smash Bros?</string>
    <string name="smash2">¿Cuántos personajes tiene el Super Smash Bros 64?</string>
    <string name="smash3">¿Cuánto daño hace el Falcon Punch en el Super Smash Bros de la Wii U?</string>
    <string name="smash4">¿Cuál es el movimiento especial de Jigglypuff hacia abajo?</string>
    <string name="smash5">¿Quién es el jefe final de Super Smash Bros Brawl?</string>

    <string name="deporte1">¿En qué año fueron los primeros Juegos Olímpicos modernos?</string>
    <string name="deporte2">¿Dónde se celebraron los primeros Juegos olimpicos de la era moderna?</string>
    <string name="deporte3">Deporte que hace uso de un guante de cuero, un palo de madera o metal y una pelota de cuero</string>
    <string name="deporte4">¿Cual es el deporta que practica Messi de manera profesional?</string>
    <string name="deporte5">El salto de la garrocha consiste en</string>

    <string name="historia1">¿Quién fue el primer presidente de Estados Unidos?</string>
    <string name="historia2">¿Qué periodo comprende la Segunda Guerra Mundial?</string>
    <string name="historia3">¿Qué emperador romano legalizó el cristianismo y puso fin a la persecución de los cristianos?</string>
    <string name="historia4">¿Qué hito informático de 1969 cambiaría radicalmente el curso de la historia de la humanidad?</string>
    <string name="historia5">¿Por qué es significativo el Poema de Gilgamesh?</string>

    <string name="varios1">2 + 2 = </string>
    <string name="varios2">El dicho "Mi casa es tu casa" se usa para </string>
    <string name="varios3">¿Cuál fue la primera consola de videojuegos?</string>
    <string name="varios4">El termino "Cubreme las espaldas" se usa para</string>
    <string name="varios5">En el juego UNO cuando se tiene una carta se debe decir</string>


    <string name="usuario_iniciosesion">Usuario</string>
    <string name="password_iniciosesion">Contraseña</string>
    <string name="crearcuenta_iniciosesion">¿No tienes una cuenta? crea una</string>
    <string name="clickaqui_iniciosesion">Aqui</string>


    <string name="registro_resgistro_usuario">Crea tu cuenta</string>
    <string name="usuario_registro_usuario">Nombre de Usuario</string>
    <string name="password_registro_usuario">Contraseña</string>
    <string name="eligeimagen_registro">Elije una imagen para tu perfil</string>
    <string name="terminarregistro_registrousuario">Listo!</string>



    <string name="encabezado_perfilusuario">Perfil de usuario</string>
    <string name="usuario_perfilusuario">Usuario: </string>
    <string name="password_perfilusuario">Contraseña: </string>
    <string name="editar_perfilusuario">Editar perfil</string>
    <string name="borrar_perfilusuario">Borrar perfil</string>
    <string name="listo_perfilusuario">Guardar Cambios </string>


    <string-array name="numPreguntas">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="numCheats">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>
