<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PreguntasActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue">

        <TextView
            android:id="@+id/pregunta_contador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/pregunta_act_1"
            android:textSize="20dp"
            android:textColor="@color/white"/>


        <TextView
            android:id="@+id/pista_contador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="170dp"
            android:text="@string/pistas_act_0"
            android:textSize="20dp"
            android:textColor="@color/white"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:gravity="center">

        <TextView
            android:id="@+id/preguntas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pregunta: "
            android:textSize="30sp"
            android:textColor="@color/dark_blue"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="311dp"

        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/respuesta1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta_1" />

        <Button
            android:id="@+id/respuesta2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta_2" />

        <Button
            android:id="@+id/respuesta3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta_3"
            />

        <Button
            android:id="@+id/respuesta4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta_4" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/anterior_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Prev"
            android:background="@color/red"/>


        <Button
            android:id="@+id/siguiente_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Next"
            android:translationX="180dp"
            android:background="@color/red"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="80dp"
        android:gravity="center">

        <TextView
            android:id="@+id/pregunta_estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validacion_pregunta_3"
            android:textSize="20dp"
            android:visibility="invisible"

            />


    </LinearLayout>


</LinearLayout>