<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_2"
    android:orientation="vertical"
    tools:context=".PerfilJugador">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/encabezado_perfilusuario"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textAlignment="center"
                        android:background="@color/ligh_gray"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="161dp"
                        android:layout_height="161dp"
                        android:layout_marginLeft="20sp"
                        android:layout_marginTop="25sp" />

                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layout_marginLeft="20sp"
                    android:text="@string/usuario_perfilusuario"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Aqui va el nombre del jugador"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:enabled="false"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layout_marginLeft="20sp"
                    android:text="@string/password_perfilusuario"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Aqui va la contraseña "
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:enabled="false"/>


            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150sp"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/editar_perfilusuario"/>

        </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>